--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,373 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --nav-font: 16px;
   --head-big: 55px;
   --head-small: 20px;
-  --head-small-l:#E11E25;
-  --head-small-r:#4280C2;
-  --background :#F4F4F4;
-  --phone-back:#DFDFDE;
-  
+  --head-small-l: #e11e25;
+  --head-small-r: #4280c2;
+  --background: #f4f4f4;
+  --phone-back: #dfdfdd80;
+  --font-color: #374151;
+  --white: #ffffff;
+  --nunito: 'Nunito', sans-serif;
+  --lato: 'Lato', sans-serif;
 }
 
-
-*,::after,::before{
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* navbar */
+
+.navbar {
+  position: absolute;
+  color: var(--white);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 3rem 9rem;
+}
+.left-side {
+  display: flex;
+  flex: 1.5;
+  gap: 0.8rem;
+  align-items: center;
+}
+.left-side > h1 {
+  font-size: 16px;
+  font-weight: 500;
+  font-family: var(--lato);
+}
+.hamburger {
+  font-size: 16px;
+}
+.hamburger:hover {
+  cursor: pointer;
+}
+.right-side {
+  display: flex;
+  flex: 2;
+  justify-content: space-between;
+  align-items: center;
+}
+.phone {
+  display: flex;
+  gap: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: var(--nunito);
+  background-color: var(--phone-back);
+  padding: 12px 22px;
+  border-radius: 22px;
+  white-space: nowrap;
+}
+.social {
+  display: flex;
+  gap: 20px;
+}
+.log {
+  color: #e11e25;
+}
+
+/* navbar end */
+
+/* main */
+.main {
+  min-height: 100vh;
+  background-color: #4280c2;
+  width: 100%;
+  background-size: cover;
+  background-image: url('./images/yoga.png');
+  background-repeat: no-repeat;
+  color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main-head {
+  /* margin-top: 8rem; */
+  font-family: var(--lato);
+  font-weight: 700;
+  font-size: 55px;
+}
+.query {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  font-family: var(--nunito);
+  font-size: 20px;
+}
+.q-left {
+  background-color: var(--head-small-l);
+  font-weight: 400;
+  padding: 10px 25px;
+  border-radius: 22px;
+}
+
+.q-right {
+  background-color: var(--head-small-r);
+  font-weight: 400;
+  padding: 10px 25px;
+  border-radius: 22px;
+}
+
+/* main end */
+
+/* about start */
+
+.about {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem auto;
+  gap: 3rem;
+}
+
+.a-head {
+  font-family: var(--lato);
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+  font-size: 35px;
+}
+.red {
+  color: var(--head-small-l);
+}
+.a-left > p {
+  margin: 1rem 0rem;
+  font-family: var(--nunito);
+  font-size: 18px;
+}
+.about > img {
+  border-radius: 12px;
+}
+.a-btn {
+  background-color: var(--head-small-l);
+  border: none;
+  padding: 10px 25px;
+  color: var(--white);
+  border-radius: 20px;
+  font-family: var(--lato);
+}
+.a-btn:hover {
+  cursor: pointer;
+  background-color: #e11e24c2;
+}
+
+/* about end */
+
+/* apply start */
+
+.apply {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background);
+  padding-bottom: 10rem;
+  width: 100%;
+}
+.apply > h2 {
+  font-family: var(--lato);
+  font-size: 35px;
+  font-weight: 400;
+  margin-bottom: 3rem;
+}
+.show {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+.grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  background-color: var(--white);
+  font-family: var(--nunito);
+  font-weight: 400;
+  font-size: 22px;
+  padding: 0 1rem 2rem;
+  border-radius: 10px;
+  box-shadow: 3px 3px 15px  #37415177;
+}
+.grid > img {
+  width: inherit;
+}
+.g-btn > h6 {
+  margin: 1rem 0;
+}
+.g-btn > button {
+  margin-top: 1rem;
+  float: right;
+  border: none;
+  background-color: transparent;
+  color: var(--head-small-l);
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.v-btn {
+  background-color: var(--head-small-l);
+  border: none;
+  padding: 10px 25px;
+  color: var(--white);
+  border-radius: 20px;
+  font-family: var(--lato);
+  margin-top: 3rem;
+}
+
+/* apply end */
+
+/* employee start */
+
+.employee{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.photo-div {
+  width: 842px;
+  height: 311px;
+  background-image: url(./images/workout3.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 5rem auto;
+  border-radius: 15px;
+}
+.img-text{
+    color: var(--font-color);
+    padding: 3rem;
+    max-width: 600px;
+}
+
+.img-text>h1{
+  font-size: 30px;
+  font-family: var(--lato);
+  font-weight: 500;
+  margin-bottom: 1rem; ;
+}
+.img-text>p{
+    font-family: var(--nunito);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.p-btn{
+    background-color: var(--head-small-r);
+  border: none;
+  padding: 10px 25px;
+  color: var(--white);
+  border-radius: 20px;
+  font-family: var(--nunito);
+  margin-top: 2.5rem;
+  font-size:18px ;
+}
+
+/* employ end */
+
+/* testimonial start */
+.test{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  background-color: var(--head-small-l);
+}
+.t-text{
+  flex: 3;
+  padding: 5rem 10rem;
+}
+.t-text>h1{
+  font-family: var(--nunito);
+  font-size: 35px;
+  font-weight: 400;
+  color: var(--white);
+  margin-bottom: 2rem;
+}
+.t-text>p{
+  color: #f5b4b6;
+  font-family: var(--lato);
+  margin-bottom: 1rem;
+  max-width: 700px;
+
+}
+.t-text>h5{
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 500;
+  font-family: var(--nunito);
+}
+.t-image{
+  flex: 2;
+  background-image: url('./images/image2.png');
+  height: 450px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* testimonial end */
+
+/* footer start */
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: var(--nunito);
+  margin: 2rem 1rem;
+}
+
+.contacts{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.c-first{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+.f-address{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-family: var(--nunito);
+}
+
+.f-address>h3{
+  font-weight: 500;
+  font-size: 22px;
+}
+.f-address>h6{
+  font-weight: 500;
+  font-size: 16px;
+}
+.f-contacts{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-family: var(--nunito);
+}
+
+
+/* footer end */
