--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --background: #f4f4f4;
   --phone-back: #dfdfdd80;
   --font-color: #374151;
+  --icon-color: #dfdfdd80;
   --white: #ffffff;
   --nunito: 'Nunito', sans-serif;
   --lato: 'Lato', sans-serif;
@@ -39,27 +40,46 @@ a {
 }
 .left-side {
   display: flex;
-  flex: 1.5;
   gap: 0.8rem;
-  align-items: center;
+  flex: 2;
+  cursor: pointer;
+  /* align-items: center; */
 }
-.left-side > h1 {
+.left-h {
   font-size: 16px;
   font-weight: 500;
   font-family: var(--lato);
+  text-align: center;
+  white-space: nowrap;
 }
-.hamburger {
-  font-size: 16px;
+.left-h::after {
+  content: '';
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  margin-top: 8px;
 }
+.hamburger > svg:hover {
+  fill: #374151;
+  transition: all 2s;
+}
+
 .hamburger:hover {
   cursor: pointer;
 }
+.logo {
+  flex: 1.5;
+}
 .right-side {
   display: flex;
-  flex: 2;
   justify-content: space-between;
   align-items: center;
+  gap: 3rem;
+  flex: 1;
 }
+
 .phone {
   display: flex;
   gap: 10px;
@@ -70,13 +90,161 @@ a {
   padding: 12px 22px;
   border-radius: 22px;
   white-space: nowrap;
+  align-items: center;
+  transition: all 0.2s;
+}
+.phone:hover {
+  opacity: 90%;
 }
 .social {
   display: flex;
   gap: 20px;
 }
-.log {
-  color: #e11e25;
+.n-ico {
+  width: 20px;
+  height: 20px;
+  color: var(--icon-color);
+  transition: all 0.2s;
+}
+.n-ico:hover {
+  color: var(--white);
+}
+.m-phone{
+  display: none;
+}
+.hide{
+   position: absolute;
+  height: 100vh;
+  background-color: #374151a6;
+  width: 100%;
+  top: 0;
+  left: -2000px;
+  backdrop-filter: blur(14px);
+  transition: all 0.8s;
+}
+.ham-menu{
+  position: absolute;
+  height: 100vh;
+  background-color: #374151a6;
+  width: 100%;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(14px);
+  transition: all 0.8s;
+}
+.close{
+  float: right;
+  margin: 2rem;
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.close:hover{
+  background-color: #f4f4f4;
+  color: #374151;
+}
+.menus{
+  display: flex;
+  flex-direction: column;
+  font-size: var(--head-big);
+  font-family: var(--nunito);
+  justify-content: center;
+  width: 100%;
+  height: 80%;
+  align-items: center;
+  gap: 3rem;
+}
+.menus>a{
+  background-color: #37415165;
+  width: 80%;
+  text-align: center;
+  border-radius: 3rem;
+}
+.menus>a:hover{
+  background-color: #f4f4f454;
+}
+
+@media screen and (max-width: 1450px) {
+  .navbar {
+    padding: 3rem;
+  }
+}
+@media screen and (max-width: 1250px) {
+  .navbar {
+    padding: 1rem;
+  }
+}
+@media screen and (max-width: 950px) {
+  .navbar {
+    position: absolute;
+    padding: 0.5rem;
+  }
+  .logo {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    width: 1rem;
+    height: 4rem;
+  }
+  .left-side {
+    flex: 1;
+    align-items: center;
+  }
+  .left-h {
+    font-size: 0.6rem;
+  }
+  .navbar {
+    padding: 1rem 2rem;
+    justify-content: space-between;
+    height: auto;
+  }
+  .logo {
+    justify-content: end;
+  }
+  .right-side {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .social {
+    /* display: none; */
+  }
+  .no {
+    display: none;
+  }
+  .phone{
+    display: none;
+  }
+  .m-phone {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    padding: 10px;
+    margin: 3rem 1rem;
+    background-color: var(--head-small-r);
+    border-radius: 50%;
+  }
+
+}
+@media screen and (max-width: 500px) {
+  .logo {
+    width: 1rem;
+    height: 2.3rem;
+  }
+  .left-side {
+    gap: 0.2rem;
+  }
+  .navbar{
+    padding: 1rem;
+  }
 }
 
 /* navbar end */
@@ -114,6 +282,11 @@ a {
   font-weight: 400;
   padding: 10px 25px;
   border-radius: 22px;
+  transition: all 0.2s;
+}
+.q-left:hover,
+.q-right:hover {
+  opacity: 90%;
 }
 
 .q-right {
@@ -121,6 +294,17 @@ a {
   font-weight: 400;
   padding: 10px 25px;
   border-radius: 22px;
+  transition: all 0.2s;
+}
+
+/* mobile */
+@media screen and (max-width: 800px) {
+  .main-head {
+    padding: 1rem;
+  }
+  .query {
+    flex-direction: column;
+  }
 }
 
 /* main end */
@@ -161,10 +345,22 @@ a {
   color: var(--white);
   border-radius: 20px;
   font-family: var(--lato);
+  transition: all 0.2s;
 }
 .a-btn:hover {
   cursor: pointer;
   background-color: #e11e24c2;
+}
+@media screen and (max-width: 950px) {
+  .about {
+    flex-direction: column;
+    margin: 0;
+    width: 100%;
+    padding: 1rem;
+  }
+  .about > img {
+    display: none;
+  }
 }
 
 /* about end */
@@ -203,7 +399,7 @@ a {
   font-size: 22px;
   padding: 0 1rem 2rem;
   border-radius: 10px;
-  box-shadow: 3px 3px 15px  #37415177;
+  box-shadow: 3px 3px 15px #37415177;
 }
 .grid > img {
   width: inherit;
@@ -230,13 +426,33 @@ a {
   border-radius: 20px;
   font-family: var(--lato);
   margin-top: 3rem;
+  transition: all 0.2s;
+}
+.v-btn:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+
+/* apply mobile */
+
+@media screen and (max-width: 950px) {
+  .apply {
+    padding: 1rem;
+    text-align: center;
+  }
+  .show {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .grid {
+    text-align: left;
+  }
 }
 
 /* apply end */
 
 /* employee start */
 
-.employee{
+.employee {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -252,39 +468,59 @@ a {
   margin: 5rem auto;
   border-radius: 15px;
 }
-.img-text{
-    color: var(--font-color);
-    padding: 3rem;
-    max-width: 600px;
+.img-text {
+  color: var(--font-color);
+  padding: 3rem;
+  max-width: 600px;
 }
 
-.img-text>h1{
+.img-text > h1 {
   font-size: 30px;
   font-family: var(--lato);
   font-weight: 500;
-  margin-bottom: 1rem; ;
+  margin-bottom: 1rem;
 }
-.img-text>p{
-    font-family: var(--nunito);
-    font-size: 16px;
-    font-weight: 400;
+.img-text > p {
+  font-family: var(--nunito);
+  font-size: 16px;
+  font-weight: 400;
 }
 
-.p-btn{
-    background-color: var(--head-small-r);
+.p-btn {
+  background-color: var(--head-small-r);
   border: none;
   padding: 10px 25px;
   color: var(--white);
   border-radius: 20px;
   font-family: var(--nunito);
   margin-top: 2.5rem;
-  font-size:18px ;
+  font-size: 18px;
+  transition: all 0.2s;
+}
+.p-btn:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+
+/* employee mobile */
+
+@media screen and (max-width: 950px) {
+  .photo-div {
+    width: fit-content;
+    height: fit-content;
+    margin: 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .photo-div {
+    background-position: left;
+  }
 }
 
 /* employ end */
 
 /* testimonial start */
-.test{
+.test {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -292,31 +528,30 @@ a {
   width: 100%;
   background-color: var(--head-small-l);
 }
-.t-text{
+.t-text {
   flex: 3;
   padding: 5rem 10rem;
 }
-.t-text>h1{
+.t-text > h1 {
   font-family: var(--nunito);
   font-size: 35px;
   font-weight: 400;
   color: var(--white);
   margin-bottom: 2rem;
 }
-.t-text>p{
+.t-text > p {
   color: #f5b4b6;
   font-family: var(--lato);
   margin-bottom: 1rem;
   max-width: 700px;
-
 }
-.t-text>h5{
+.t-text > h5 {
   color: var(--white);
   font-size: 18px;
   font-weight: 500;
   font-family: var(--nunito);
 }
-.t-image{
+.t-image {
   flex: 2;
   background-image: url('./images/image2.png');
   height: 450px;
@@ -324,11 +559,21 @@ a {
   background-size: cover;
 }
 
+/* testimonial mobile */
+@media screen and (max-width: 950px) {
+  .t-image {
+    display: none;
+  }
+  .t-text {
+    padding: 2.5rem;
+  }
+}
+
 /* testimonial end */
 
 /* footer start */
 
-.footer{
+.footer {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -337,37 +582,68 @@ a {
   margin: 2rem 1rem;
 }
 
-.contacts{
+.contacts {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-.c-first{
+.c-first {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
 }
-.f-address{
+.f-address {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   font-family: var(--nunito);
 }
 
-.f-address>h3{
+.f-address > h3 {
   font-weight: 500;
   font-size: 22px;
 }
-.f-address>h6{
+.f-address > h6 {
   font-weight: 500;
   font-size: 16px;
 }
-.f-contacts{
+.f-contacts {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   font-family: var(--nunito);
+  align-items: flex-end;
+}
+.f-ico {
+  width: 20px;
+  height: 20px;
+  color: var(--font-color);
+  transition: all 0.2s;
+}
+.f-ico:hover {
+  color: black;
+}
+.f-social {
+  display: flex;
+  gap: 0.5rem;
 }
 
+/* footer mobile */
+@media screen and (max-width: 950px) {
+  .footer {
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+  }
+  .c-first {
+    justify-content: center;
+  }
+  .f-address {
+    align-items: center;
+  }
+  .f-contacts {
+    align-items: center;
+  }
+}
 
 /* footer end */
